Carinfo Binded, Seller Dinded

--- a/MvvmApp/MvvmApp/TurboAz.csproj
+++ b/MvvmApp/MvvmApp/TurboAz.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluidKit" Version="1.0.0" />
     <PackageReference Include="SimpleInjector" Version="5.4.1" />
   </ItemGroup>
 
